--- a/WatchStore/Pages/Home.razor
+++ b/WatchStore/Pages/Home.razor
@@ -1,4 +1,34 @@
-﻿@page "/"
+﻿@page "/home"
+@using WatchStore.Services
+@using WatchStoreApi.Dtos
+@inject IProductService _iproductService
 <PageTitle>Home</PageTitle>
 
 <h1>Hello, world!</h1>
+
+@if (products == null)
+{
+    <p>Loading...</p>
+}
+else
+{
+@foreach (var product in products)
+    {
+        <p>@product.Name</p>
+        <p>@product.Description</p>
+        <p>@product.Price</p>
+        <p>@product.Quantity</p>
+        <p>@product.CategoryName</p>
+    }
+}
+
+@code
+{
+    private IEnumerable<ProductDto> products;
+    
+    protected override async Task OnInitializedAsync()
+    {
+        products = await _iproductService.GetProducts();
+    }
+};
+
