--- a/WatchStore/Pages/Rolex.razor
+++ b/WatchStore/Pages/Rolex.razor
@@ -1,8 +1,28 @@
-﻿@page "/"
+﻿@page "/rolex"
 @using System.Globalization
 @using WatchStore.Services
 @inject IProductService _iproductService
 <h3>Rolex Watches</h3>
+
+<style>
+    .cellHover img
+    {
+        transition: all 300ms ease-out;
+    }
+    .cellHover:hover img
+    {
+        transition: all 300ms ease-in;
+        transform: scale(1.1);
+    }
+   
+    body
+    {
+        background-color: rgb(255,255,255);
+    }
+        
+    
+</style>
+
 
 @if (products == null)
 {
@@ -17,33 +37,31 @@ else
         const int watchesPerRow = 3;
         var rolexRowList = new List<ProductDto>();
         
-        <div class="container" style="display: flex;flex-direction:column;justify-content: center;align-items: center;height: 100%;width: 100%">
-            
-        
-        @for (int i = 0; i < rolexCount; i++)
-        {
-            // Pagination
-            rolexRowList = rolex.Skip(i * watchesPerRow).Take(watchesPerRow).ToList();
-            
-            <div class="row mt-3 md-3" style="display:flex;gap: 15px;justify-content: center;width: 100%">
-                @foreach (var watch in rolexRowList)
-                {   
-                    <div class=""  style="display:flex;border:4px solid black; height: auto;width: 33%;gap: 15px">
-                            <div style="display: flex;width: 100%;flex-direction:row;align-items: center;justify-content: space-between;" class="">
-                                <div class="" style="" >
-                                    <p class="">
-                                        @watch.Name
-                                    </p>
-                                    <b><p>@watch.Price.ToString("N0", new System.Globalization.CultureInfo("bg-BG")) BGN</p></b>
+        <div class="container" style="display: flex;flex-direction:column;justify-content: center;align-items: center;height: 100%;width: 100%;gap: 7px">
+            @for (int i = 0; i < rolexCount; i++)
+            {
+                // Pagination
+                rolexRowList = rolex.Skip(i * watchesPerRow).Take(watchesPerRow).ToList();
+                
+                <div class="row mt-0 md-3" style="display:flex;gap: 7px;justify-content: center;width: 100%">
+                    @foreach (var watch in rolexRowList)
+                    {   
+                        <div class="cellHover"  style="background-color:rgb(248,248,248);display:flex;border: 1px solid transparent; height: auto;width: 31%;padding: 0;">
+                                <div style="display: flex;width: 100%;flex-direction:row;align-items: center;justify-content: space-between;" class="">
+                                    <div class="" style="padding-left: 15px" >
+                                        <b><p class="" style="font-size:18px;color: #212121">
+                                            @watch.Name
+                                        </p></b>
+                                        <p style="font-size:15px;color: #212121">@watch.Price.ToString("N0", new System.Globalization.CultureInfo("bg-BG")) BGN</p>
+                                    </div>
+                                    <div style="">
+                                        <img style="" class="img" width="170px" height="251px" src="@watch.Image">
+                                    </div>
                                 </div>
-                                <div style="">
-                                    <img class="" width="170px" height="251px" src="@watch.Image">
-                                </div>
-                            </div>
-                    </div>
-                }
-            </div>
-        }
+                        </div>
+                    }
+                </div>
+            }
         </div>
     }
 
