added watchCatalog component and added Hublot watches with styling

--- a/WatchStore/Pages/Breitling.razor
+++ b/WatchStore/Pages/Breitling.razor
@@ -1,6 +1,10 @@
 ﻿@page "/Breitling"
+@using WatchStore.Components
 <h3>Breitling</h3>
 
-@code {
+<WatchCatalog CategoryId="4" />
+
+@code 
+{
     
 }
