--- a/WatchStore/Pages/Patek Philippe.razor
+++ b/WatchStore/Pages/Patek Philippe.razor
@@ -1,6 +1,11 @@
 ﻿@page "/Patek_Philippe"
+@using WatchStore.Components
 <h3>Patek_Philippe</h3>
 
-@code {
+<WatchCatalog CategoryId="3" />
+
+
+@code 
+{
     
 }
