--- a/WatchStore/Pages/Rolex.razor
+++ b/WatchStore/Pages/Rolex.razor
@@ -1,80 +1,17 @@
 ﻿@page "/rolex"
 @using System.Globalization
 @using WatchStore.Services
+@using WatchStore.Components
 @inject IProductService _iproductService
 <h3>Rolex Watches</h3>
 
-<style>
-    .cellHover img
-    {
-        transition: all 300ms ease-out;
-    }
-    .cellHover:hover img
-    {
-        transition: all 300ms ease-in;
-        transform: scale(1.1);
-    }
-   
-    body
-    {
-        background-color: rgb(255,255,255);
-    }
-        
-    
-</style>
-
-
-@if (products == null)
-{
-    <p>Loading...</p>
-}
-else
-{
-    rolex = products.Where(x => x.CategoryId == 1);
-    var rolexCount = rolex.Count(); 
-    @if (rolexCount > 0)
-    {
-        const int watchesPerRow = 3;
-        var rolexRowList = new List<ProductDto>();
-        
-        <div class="container" style="display: flex;flex-direction:column;justify-content: center;align-items: center;height: 100%;width: 100%;gap: 7px">
-            @for (int i = 0; i < rolexCount; i++)
-            {
-                // Pagination
-                rolexRowList = rolex.Skip(i * watchesPerRow).Take(watchesPerRow).ToList();
-                
-                <div class="row mt-0 md-3" style="display:flex;gap: 7px;justify-content: center;width: 100%">
-                    @foreach (var watch in rolexRowList)
-                    {   
-                        <div class="cellHover"  style="background-color:rgb(248,248,248);display:flex;border: 1px solid transparent; height: auto;width: 31%;padding: 0;">
-                                <div style="display: flex;width: 100%;flex-direction:row;align-items: center;justify-content: space-between;" class="">
-                                    <div class="" style="padding-left: 15px" >
-                                        <b><p class="" style="font-size:18px;color: #212121">
-                                            @watch.Name
-                                        </p></b>
-                                        <p style="font-size:15px;color: #212121">@watch.Price.ToString("N0", new System.Globalization.CultureInfo("bg-BG")) BGN</p>
-                                    </div>
-                                    <div style="">
-                                        <img style="" class="img" width="170px" height="251px" src="@watch.Image">
-                                    </div>
-                                </div>
-                        </div>
-                    }
-                </div>
-            }
-        </div>
-    }
-
-}
-
+<WatchCatalog  CategoryId="1"/>
 
 @code 
 {
-    private IEnumerable<ProductDto> products;
-    private IEnumerable<ProductDto> rolex;
-    protected override async Task OnInitializedAsync()
-    {
-        products = await _iproductService.GetProducts();
-        
-    }
+    
 }
+
+
+
+
