--- a/WatchStore/Components/WatchCatalog.razor
+++ b/WatchStore/Components/WatchCatalog.razor
@@ -12,7 +12,14 @@
         transition: all 300ms ease-in;
         transform: scale(1.1);
     }
-   
+    a
+    {
+        text-decoration: none;
+    }
+    a:hover
+    {
+        text-decoration: none;
+    }
     body
     {
         background-color: rgb(255,255,255);
@@ -41,32 +48,40 @@ else
                 // Pagination
                 watchRowList = watches.Skip(i * watchesPerRow).Take(watchesPerRow).ToList();
                 
-                <div class="row mt-0 md-3" style="display:flex;gap: 7px;justify-content: center;width: 100%">
+                <div class="row mt-0 md-3" style="display:flex;flex-direction: row;gap: 7px;justify-content: center;width: 100%">
                     @foreach (var watch in watchRowList)
                     {   
-                        <div class="cellHover"  style="background-color:rgb(248,248,248);display:flex;border: 1px solid transparent; height: 251px;width: 31%;padding: 0;">
-                                <div style="display: flex;width: 100%;flex-direction:row;align-items: center;justify-content: space-between;" class="">
-                                    <div class="" style="padding-left: 15px" >
-                                        <b><p class="" style="font-size:18px;color: #212121">
-                                            @watch.Name
-                                        </p></b>
+                       
+                        <div class="cellHover" style="background-color:rgb(248,248,248);display:flex;border: 1px solid transparent; height: 34vh;width: 31%;padding: 0;">
+                            <a href="/WatchPageDescription/@watch.Id" style="display: block;width: 100%;height: 100%"> 
+                            <div style="display: flex;width: 100%;height:100%;flex-direction:row;align-items: center;justify-content: space-between;" class="">
+                                <div class="" style="padding-left: 15px; display: flex;flex-direction: column">
+                                    <div>
+                                        <b>
+                                            <p class="" style="font-size:18px;color: #212121">
+                                                @watch.Name
+                                            </p></b>
+                                    </div> 
+                                    <div>
                                         <p style="font-size:15px;color: #212121">@watch.Price.ToString("N0", new System.Globalization.CultureInfo("bg-BG")) BGN</p>
                                     </div>
-                                    <div style="">
-                                        @if(CategoryId == 1)
-                                        {
-                                            // 214 251
-                                            // 215 186
-                                            <img style="" class="img" width="170px" height="251px" src="@watch.Image">
-                                        }
-                                        else if (CategoryId == 2)
-                                        {
-                                            <img style="" class="img"  width="140px" height="200px" src="@watch.Image">
-                                        } 
-
-
-                                    </div>
+                                    
                                 </div>
+                                <div style="">
+                                    @if (CategoryId == 1)
+                                    {
+                                        // 214 251
+                                        // 215 186
+                                        // 170 251
+                                        <img style="" class="img" width="170px" height="251px" src="@watch.Image">
+                                    }
+                                    else if (CategoryId == 2)
+                                    {
+                                        <img style="" class="img" width="140px" height="200px" src="@watch.Image">
+                                    }
+                                </div>
+                            </div>
+                          </a> 
                         </div>
                     }
                 </div>
@@ -80,13 +95,12 @@ else
 @code 
 {
     [Parameter] public int CategoryId { get; set; }
-    
+
     private IEnumerable<ProductDto> products;
     private IEnumerable<ProductDto> watches;
-    
+
     protected override async Task OnInitializedAsync()
     {
         products = await _iproductService.GetProducts();
-        
     }
 }
