--- a/WatchStore/Components/NavMenu.razor
+++ b/WatchStore/Components/NavMenu.razor
@@ -40,7 +40,7 @@
     </div>
 
     <div>
-        <img  width="30px" height="30px" src="Images/iconCart.png" alt="">
+        <a href="/Cart"><img  width="30px" height="30px" src="Images/iconCart.png" alt=""></a>
     </div>
 </div>
 
