--- a/WatchStore/Pages/Cart.razor
+++ b/WatchStore/Pages/Cart.razor
@@ -2,13 +2,18 @@
 @using WatchStore.Services
 @using WatchStore.Components
 @inject ICartItemService _iCartItemService
+@inject IProductService _iProductService
 <h3>Shopping Cart</h3>
 
 @if(cartItems == null)
 {
     <LoadingIcon />
 }
-else
+else if(cartItems.Count() == 0)
+{
+    <h3 class="text-danger">Shopping Cart is empty!</h3>
+}
+else 
 {
     
     <div style="display: flex; justify-content: space-around; width: 100%; height: 100vh; gap: 20px;">
@@ -23,12 +28,11 @@ else
                         <p style="font-size: 16px;margin: 0 ">@cartItem.Description</p>
                         <p style="font-size: 15px;margin: 0; color: #212121;">@cartItem.TotalPrice.ToString("N0", new System.Globalization.CultureInfo("bg-BG")) BGN</p>
                     </div>
-                    <div style="display: flex;flex-direction: column; gap: 10px;">
-                        <button onclick="@DeleteCartItem(cartItem.Id)" class="btn btn-danger">Remove</button>
+                    <div style="display: flex;flex-direction: column; gap: 10px; width: 10vw;">
+                        <button @onclick="@(() => DeleteCartItem(cartItem.Id))" class="btn btn-danger">Remove</button>
                         <div style="display: flex;flex-direction: row;justify-content: center">
-                            <button class="btn btn-secondary" onclick=""><img src="Images/arrow-left.svg" alt=""></button>
-                            <span>@cartItem.Quantity</span>
-                            <button class="btn btn-secondary" onclick=""><img src="Images/arrow-right.svg" alt=""></button>
+                            <InputNumber @bind-Value="@cartItem.Quantity" class="form-control"/>
+                            <button @onclick="@(() => UpdateCartItemQuantity(cartItem))">Update</button>
                         </div>
                     </div>
                 </div>
@@ -50,17 +54,47 @@ else
 @code 
 {
     private IEnumerable<CartItemDto> cartItems;
-    
-    int count = 1;
+    private IEnumerable<ProductDto> productItems;
+    //private int QuantityForCartItem { get; set; } = 1;
     protected override async Task OnInitializedAsync()
     {
         cartItems = await _iCartItemService.GetCartItems();
+      //  productItems = await _productService.GetProducts();
     }
+    
+    protected async Task UpdateCartItemQuantity(CartItemDto cartItem)
+    {
+        if (cartItem != null)
+        {
+            var productItem = await _iProductService.GetProduct(cartItem.ProductId);
+            if (productItem != null)
+            {
+                if (cartItem.Quantity < 1 || cartItem.Quantity > productItem.Quantity)
+                {
+                    cartItem.Quantity = 1;
+                }
+                else
+                {
+                    await _iCartItemService.UpdateCartItemQuantity(cartItem.Id, new CartItemQuantityUpdateDto()
+                    {
+                        ProductId = cartItem.ProductId,
+                        Quantity = cartItem.Quantity
+                    });
 
+                    cartItems = await _iCartItemService.GetCartItems();
+                    StateHasChanged();
+                }
+            }
+        }
+
+       
+    }
 
     protected async Task DeleteCartItem(int id)
     {
         await _iCartItemService.DeleteCartItem(id);
+        cartItems = await _iCartItemService.GetCartItems();
+        StateHasChanged();
     }
 
 }
