--- a/WatchStore/Layout/MainLayout.razor
+++ b/WatchStore/Layout/MainLayout.razor
@@ -1,4 +1,5 @@
 ﻿@using WatchStore.Components
+@inject NavigationManager NavigationManager
 @inherits LayoutComponentBase
 <div class="page">
     <!--  <div class="sidebar">
@@ -7,10 +8,17 @@
     <main>
 
         <NavMenu/>  
-        
-        <article class="content px-4">
+       
+        @if (NavigationManager.Uri.EndsWith("/"))
+        {
             @Body
-        </article>
+        }
+        else
+        {
+            <article class="content px-4">
+                @Body
+            </article>
+        }
 
         <footer>
             <h1>FOOTER</h1>
