--- a/WatchStore/Pages/Home.razor
+++ b/WatchStore/Pages/Home.razor
@@ -4,26 +4,54 @@
 @using WatchStore.Components
 @inject IProductService _iproductService
 <PageTitle>Home</PageTitle>
+<!-- todo da sloja i na drugite mesta pageTitle !-->
 
-<h1>Hello, world!</h1>
 
-@if (products == null)
-{
-    <p>Loading...</p>
-   
-}
-else
-{
-   
-}
+<style>
+    .video-background
+    {
+        position: relative;
+        height: 93vh;
+    }
+    body
+    {
+        overflow:hidden;
+    }
+    #bgVideo
+    {
+        width: 100%;
+        height: 100%;
+        z-index: -1;
+        object-fit: cover;
+    }
+    
+    .overlay
+    {
+        position: absolute;
+        top: 50%;
+        left: 50%;
+        transform: translate(-50%, -50%);
+        flex-direction: column;
+        color: white;
+        text-align: center;
+        z-index: 1;
+    }
+</style>
+
+<div class="video-background" style="">
+    <video autoplay muted loop id="bgVideo">
+        <source src="Images/watchVideo3.mp4" type="video/mp4">
+    </video>
+    <div class="overlay">
+    </div>
+</div>
+
+
+
 
 @code
 {
-    private IEnumerable<ProductDto> products;
-    
-    protected override async Task OnInitializedAsync()
-    {
-        products = await _iproductService.GetProducts();
-    }
+   
 }
 
+    
